--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,8 @@ from_root
 evidently==0.2.8
 dill
 PyYAML
-neuro_mf
-boto3
+neuro_mf #automate 
+boto3 #connect with aws service
 mypy-boto3-s3
 botocore
 fastapi
